--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </ul>
   <h3 id="current-work">Current Work</h3>
   <ul>
-    <li>Blackstone</li>
+    <li>Robots in Groups</li>
   </ul>
   <h3 id="past-work">Past Work</h3>
   <ul>
