--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
     <p>
     </p>
   </header>
-  <p>Hi, I'm Meryl. </p>
+  <p>Hi, my name is Meryl. I'm a computer science student at Cornell University interested in human-robot interaction,
+  </p>
   <h3 id="projects">Projects</h3>
   <ul>
-    <li><a href="/blog/">Blog</a></li>
-    <li><a href="/notes/">Notes</a></li>
-    <li>Interactive <a href="https://edj36.github.io/interactive/">resume</a></li>
+    <li><a href="fall2022resume.pdf">Resume</a></li>
   </ul>
   <h3 id="current-work">Current Work</h3>
   <ul>
@@ -47,18 +46,14 @@
   </ul>
   <h3 id="past-work">Past Work</h3>
   <ul>
-    <li>Bachelor’s degree at Cornell</li>
+    <li>Verizon</li>
+    <li><a href="BCIResearch.pdf">Research</a></li>
   </ul>
   <h3 id="how-to-contact-me">How to contact me</h3>
   <ul>
     <li>may43@cornell.edu</li>
     <li><a href="https://www.linkedin.com/in/meryl-y-551028171/">LinkedIn</a></li>
   </ul>
-  <p>
-    <hr>
-    <a href="/">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/blog/">Blog</a>&nbsp;&nbsp;&nbsp;&nbsp;<a
-      href="/notes/">Notes</a>
-  </p>
 </body>
 
 </html>
