--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="img/me.jpg" alt="avatar">
       </div>
       <div style="margin-left:-25px;">
-        <img style="width:75%;" src="img/sign.jpg" alt="sign">
+        <h1>Hi, I'm Meryl. </h1>
       </div>
 
       <h2>
