--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
         <h1>Hi, I'm Meryl. </h1>
       </div>
 
-      <h2>
-        I am a computer science student at <span class="emphasis">Cornell University</span> interested in human-robot
-        interaction. <br>
-        <a href="fall2022resume.pdf">Resume</a>
-      </h2>
+      <div class="body" style="display:none;">
+        <h2>
+          I am a computer science student at <span class="emphasis">Cornell University</span> interested in human-robot
+          interaction. <br>
+          <a href="fall2022resume.pdf">Resume</a>
+        </h2>
+      </div>
+
     </div>
 
     <div id="about me" class="body" style="display:none;">
