--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Hi, I'm Meryl. </h1>
       </div>
 
-      <div class="body" style="display:none;">
+      <div class="body">
         <h2>
           I am a computer science student at <span class="emphasis">Cornell University</span> interested in human-robot
           interaction. <br>
