--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <h1>Hi, I'm Meryl. </h1>
       </div>
 
-      <div class="body">
+      <div style="margin-left:-25px;">
         <h2>
           I am a computer science student at <span class="emphasis">Cornell University</span> interested in human-robot
           interaction. <br>
-          <a href="fall2022resume.pdf">Resume</a>
+          Check out my <a href="fall2022resume.pdf">resume</a>.
         </h2>
       </div>
 
@@ -44,7 +44,7 @@
     <div id="about me" class="body" style="display:none;">
       <h2 style="margin-top:100px;">
         <span class="emphasis">I'm currently located in:</span> Ithaca, NY <br>
-        <span class="emphasis">I like:</span> running, swimming, Marvel movies<br>
+        <span class="emphasis">My hobbies include:</span> running, swimming, paper-folding. <br>
       </h2>
     </div>
 
