--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <button class="tabs active" onclick="showNewTab(event, 'home')">Home</button>
     <button class="tabs" onclick="showNewTab(event, 'about me')">About Me</button>
     <button class="tabs" onclick="showNewTab(event, 'research')">Research</button>
-    <button class="tabs" onclick="showNewTab(event, 'contact')">Contact</button>
   </div>
 
 
@@ -30,9 +29,16 @@
       <div style="margin-left:-25px;">
         <h1>Hi, I'm Meryl. </h1><br><br><br>
         <h2>
-          I am a computer science student at <span class="emphasis">Cornell University</span> interested in human-robot
-          interaction. <br>
-          Check out my <a href="fall2022resume.pdf">resume</a>.
+          I am a computer science student at <span class="emphasis">Cornell University</span> interested in
+          human-computer
+          interaction, design, and artificial intelligence. <br>
+          <i>
+            To request my resume / contact me:
+            <ul>
+              <li> my email is may43 [at] cornell [dot] edu</li>
+              <li> my <a href="https://www.linkedin.com/in/meryl-y-551028171/">LinkedIn</a> </li>
+            </ul>
+          </i>
         </h2>
       </div>
 
@@ -41,22 +47,15 @@
     <div id="about me" class="body" style="display:none;">
       <h2 style="margin-top:100px;">
         <span class="emphasis">I'm currently located in:</span> Ithaca, NY <br>
-        <span class="emphasis">My hobbies include:</span> running, swimming, paper-folding. <br>
+        <span class="emphasis">I enjoy:</span> running, swimming, Marvel movies, origami. <br>
+        <span class="emphasis">Right now I'm reading:</span> <u>Algorithms to Live By</u>. <br>
       </h2>
     </div>
 
     <div id="research" class="body" style="display:none;">
       <h2 style="margin-top:50px;">
         I conduct research in the <span class="emphasis"><a href="https://riglab.infosci.cornell.edu/"
-            target="_blank">Robots in Groups Lab</a></span> under Professor Malte Jung. <br>
-        <a href="BCIResearch.pdf">BCI Research</a></li>
-      </h2>
-    </div>
-
-    <div id="contact" class="body" style="display:none;">
-      <h2 style="margin-top:50px;">
-        Email <br>
-        <a href="https://www.linkedin.com/in/meryl-y-551028171/">LinkedIn</a>
+            target="_blank">Robots in Groups Lab</a></span> advised by Professor Malte Jung. <br>
       </h2>
     </div>
 
