--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <h2>
           I am a computer science student at <span class="emphasis">Cornell University</span> interested in
           human-computer
-          interaction, design, and artificial intelligence. <br>
+          interaction, design, and artificial intelligence. <br><br><br>
+          For reference, my resume. <br><br><br>
           <i>
-            To request my resume / contact me:
+            To contact me:
             <ul>
               <li> my email is may43 [at] cornell [dot] edu</li>
               <li> my <a href="https://www.linkedin.com/in/meryl-y-551028171/">LinkedIn</a> </li>
@@ -46,15 +47,18 @@
 
     <div id="about me" class="body" style="display:none;">
       <h2 style="margin-top:100px;">
-        <span class="emphasis">I'm currently located in:</span> Ithaca, NY <br>
+        <span class="emphasis">I'm located in:</span> Ithaca, NY <br>
         <span class="emphasis">I enjoy:</span> running, swimming, Marvel movies, origami. <br>
-        <span class="emphasis">Right now I'm reading:</span> <u>Algorithms to Live By</u>. <br>
+        <span class="emphasis">I'm reading:</span> <u>Algorithms to Live By</u> by Brian Christian and Tom Griffiths.
+        <br>
       </h2>
     </div>
 
     <div id="research" class="body" style="display:none;">
       <h2 style="margin-top:50px;">
-        I conduct research in the <span class="emphasis"><a href="https://riglab.infosci.cornell.edu/"
+        I seek to investigate how technology impacts users and more importantly, how we can design technology to enable
+        autonomy and thus promote well-being. <br>
+        I currently conduct research in the <span class="emphasis"><a href="https://riglab.infosci.cornell.edu/"
             target="_blank">Robots in Groups Lab</a></span> advised by Professor Malte Jung. <br>
       </h2>
     </div>
