--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <h2>
           I am a computer science student at <span class="emphasis">Cornell University</span> interested in
           human-computer
-          interaction, design, and artificial intelligence. <br><br><br>
-          For reference, my resume. <br><br><br>
+          interaction, design, and artificial intelligence. <br><br>
+          For reference, my resume. <br><br>
           <i>
             To contact me:
             <ul>
@@ -57,7 +57,7 @@
     <div id="research" class="body" style="display:none;">
       <h2 style="margin-top:50px;">
         I seek to investigate how technology impacts users and more importantly, how we can design technology to enable
-        autonomy and thus promote well-being. <br>
+        autonomy and thus promote well-being. <br><br>
         I currently conduct research in the <span class="emphasis"><a href="https://riglab.infosci.cornell.edu/"
             target="_blank">Robots in Groups Lab</a></span> advised by Professor Malte Jung. <br>
       </h2>
