--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="img/me.jpg" alt="avatar">
       </div>
       <div style="margin-left:-25px;">
-        <h1>Hi, I'm Meryl. </h1><br><br><br>
+        <h1>Hi, I'm Meryl. </h1><br><br><br><br>
         <h2>
           I am a computer science student at <span class="emphasis">Cornell University</span> interested in
           human-computer
