--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           I am a computer science student at <span class="emphasis">Cornell University</span> interested in
           human-computer
           interaction, design, and artificial intelligence. <br><br>
-          For reference, my resume. <br><br>
+          For reference, my <a href="https://www.linkedin.com/in/meryl-y-551028171/">resume</a>. <br><br>
           <i>
             To contact me:
             <ul>
               <li> my email is may43 [at] cornell [dot] edu</li>
-              <li> my <a href="https://www.linkedin.com/in/meryl-y-551028171/">LinkedIn</a> </li>
+              <li> my <a href="2023springres.pdf">LinkedIn</a> </li>
             </ul>
           </i>
         </h2>
