--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
       <h2 style="margin-top:100px;">
         <span class="emphasis">I'm located in:</span> Ithaca, NY <br>
         <span class="emphasis">I enjoy:</span> running, swimming, Marvel movies, origami. <br>
-        <span class="emphasis">I'm reading:</span> <u>Algorithms to Live By</u> by Brian Christian and Tom Griffiths.
+        <span class="emphasis">I'm reading:</span> <a
+          href="https://www.amazon.com/Algorithms-Live-Computer-Science-Decisions/dp/1250118360/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1674100929&sr=8-1">Algorithms
+          to Live By</a> by Brian Christian and Tom Griffiths.
         <br>
       </h2>
     </div>
