--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <h1>Hi, I'm Meryl. </h1><br><br><br><br>
         <h2>
           I am a computer science student at <span class="emphasis">Cornell University</span> interested in
-          human-computer
-          interaction, design, and artificial intelligence. <br><br>
+          human-robot interaction, human-computer interaction, design, and artificial intelligence. <br><br>
           For reference, my <a href="2023springres.pdf">resume</a>. <br><br>
           <i>
             To contact me:
@@ -58,10 +57,18 @@
 
     <div id="research" class="body" style="display:none;">
       <h2 style="margin-top:50px;">
-        I seek to investigate how technology impacts users and more importantly, how we can design technology to enable
-        autonomy and thus promote well-being. <br><br>
+        I investigate how technology impacts people and more importantly, how we can design technology to enable
+        autonomy and promote user well-being. <br><br>
         I currently conduct research in the <span class="emphasis"><a href="https://riglab.infosci.cornell.edu/"
-            target="_blank">Robots in Groups Lab</a></span> advised by Professor Malte Jung. <br>
+            target="_blank">Robots in Groups Lab</a></span> advised by Professor Malte Jung. <br><br>
+        I previously conducted an independent biomedical research project at the University of Tennessee. I studied
+        <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><b></b>
+
+        <span class="emphasis">Representative Work:</span> <br>
+        Meryl Ye, Rei (Wen-Ying) Lee, Johan Michalove, and Jessie Wong. 2023.
+        <a href="https://doi.org/10.1145/3568294.3580182">Toaster Bot: Designing For Utility and Enjoyability in the
+          Kitchen Space. </a> In Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction (HRI
+        ’23 Companion). <br>
       </h2>
     </div>
 
