--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div style="margin-left:-25px;">
         <h1>Hi, I'm Meryl. </h1><br><br><br><br>
         <h2>
-          I am a computer science student at <span class="emphasis">Cornell University</span> interested in
+          I am a computer science student at <a href="https://www.cornell.edu/">Cornell University</a> curious about
           human-robot interaction, human-computer interaction, design, and artificial intelligence. <br><br>
           For reference, my <a href="2023springres.pdf">resume</a>. <br><br>
           <i>
