--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
         I currently conduct research in the <span class="emphasis"><a href="https://riglab.infosci.cornell.edu/"
             target="_blank">Robots in Groups Lab</a></span> advised by Professor Malte Jung. <br><br>
         I previously conducted an independent biomedical research project at the University of Tennessee. I studied
-        <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><b></b>
+        <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><br><br>
 
         <span class="emphasis">Representative Work:</span> <br>
+        Meryl Ye, Rei (Wen-Ying) Lee, Johan Michalove, and Jessie Wong. 2023.
+        Toaster Bot: Designing For Utility and Enjoyability in the
+        Kitchen Space. In Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction (HRI
+        ’23 Companion). <br>
 
       </h2>
     </div>
