--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
         <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><br><br>
 
         <span class="emphasis">Representative Work:</span> <br>
+      </h2>
+      <h3>
         Meryl Ye, Rei (Wen-Ying) Lee, Johan Michalove, and Jessie Wong. 2023.
         Toaster Bot: Designing For Utility and Enjoyability in the
         Kitchen Space. In Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction (HRI
-        ’23 Companion). <br>
+        ’23 Companion). </h3><br>
 
-      </h2>
+
     </div>
 
   </div>
