--- a/mobile.html
+++ b/mobile.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Karla|Almarai|Rock+Salt&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title> Meryl Ye </title>
-    <meta name="description" content="PhD Student at Carnegie Mellon University, SCS, HCII." />
+    <meta name="description" content="Student at Cornell University, CS." />
     <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
 
