--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 
   <script>
 
-
+    var md = new MobileDetect(window.navigator.userAgent);
+    if (md.mobile() || md.tablet()) {
+      document.location.href = 'mobile.html';
+    }
 
     function showNewTab(event, newTab) {
       var i, body, tabs;
