--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <h2 style="margin-top:50px;">
         I investigate how technology impacts people and more importantly, how we can design technology to enable
         autonomy and promote user well-being. <br><br>
-        I currently conduct research in the <span class="emphasis"><a href="https://riglab.infosci.cornell.edu/"
-            target="_blank">Robots in Groups Lab</a></span> advised by Professor Malte Jung. <br><br>
+        I currently conduct research in the <a href="https://riglab.infosci.cornell.edu/" target="_blank">Robots in
+          Groups Lab</a> advised by Professor Malte Jung. <br><br>
         I previously conducted an independent biomedical research project at the University of Tennessee. I studied
         <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><br><br>
 
