--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
         <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><br><br>
 
         <span class="emphasis">Representative Work:</span> <br>
-        <span style="font-size:11pt;">Meryl Ye, Rei (Wen-Ying) Lee, Johan Michalove, and Jessie Wong.
-          2023.
-          Toaster Bot: Designing For Utility and Enjoyability in the
-          Kitchen Space. In Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction (HRI
-          ’23 Companion).</span>
+        <span style="font-size:11pt;">
+          Meryl Ye, Rei (Wen-Ying) Lee, Johan Michalove, and Jessie Wong. 2023.
+          Toaster Bot: Designing for Utility and Enjoyability in the Kitchen Space.
+          In Companion of the 2023 ACM/IEEE International Conference on Human-Robot
+          Interaction (HRI '23). Association for Computing Machinery,
+          New York, NY, USA, 787–790. https://doi.org/10.1145/3568294.3580182
+        </span>
         <br>
 
       </h2>
