--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
           Toaster Bot: Designing for Utility and Enjoyability in the Kitchen Space.
           In Companion of the 2023 ACM/IEEE International Conference on Human-Robot
           Interaction (HRI '23). Association for Computing Machinery,
-          New York, NY, USA, 787–790. https://doi.org/10.1145/3568294.3580182
+          New York, NY, USA, 787–790. <a
+            href="https://doi.org/10.1145/3568294.3580182">https://doi.org/10.1145/3568294.3580182</a>
         </span>
         <br>
 
