--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button class="tabs active" onclick="showNewTab(event, 'home')">Home</button>
     <button class="tabs" onclick="showNewTab(event, 'about me')">About Me</button>
     <button class="tabs" onclick="showNewTab(event, 'research')">Research</button>
+    <button class="tabs" onclick="showNewTab(event, 'news')">News</button>
   </div>
 
 
@@ -75,6 +76,13 @@
         </span>
         <br>
 
+      </h2>
+    </div>
+
+    <div id="news" class="body" style="display:none;">
+      <h2 style="margin-top:100px;">
+        <a href="https://spectrum.ieee.org/human-robot-interaction-2659586979"> Toaster Bot </a> debut at HRI 2023.
+        <br>
       </h2>
     </div>
 
