--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div id="news" class="body" style="display:none;">
       <h2 style="margin-top:100px;">
         <span class="emphasis">March 13, 2023:</span>
-        <a href="https://spectrum.ieee.org/human-robot-interaction-2659586979">Toaster Bot</a> debuts at HRI.
+        Debut of <a href="https://spectrum.ieee.org/human-robot-interaction-2659586979">Toaster Bot</a> at HRI.
         <br>
       </h2>
     </div>
