--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     </div>
 
     <div id="news" class="body" style="display:none;">
+      <div class="img">
+        <img src="ToasterBot.jpg" alt="toaster">
+      </div>
       <h2 style="margin-top:100px;">
         <span class="emphasis">March 13, 2023:</span>
         Debut of <a href="https://spectrum.ieee.org/human-robot-interaction-2659586979">Toaster Bot</a> at HRI.
