--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="tabs active" onclick="showNewTab(event, 'home')">Home</button>
     <button class="tabs" onclick="showNewTab(event, 'about me')">About Me</button>
     <button class="tabs" onclick="showNewTab(event, 'research')">Research</button>
-    <button class="tabs" onclick="showNewTab(event, 'news')">News and <br>Other Stories</button>
+    <button class="tabs" onclick="showNewTab(event, 'news')">News and Other Stories</button>
   </div>
 
 
@@ -83,11 +83,13 @@
       <div class="img">
         <img src="ToasterBot.jpg" alt="toaster">
       </div>
-      <h2 style="margin-top:100px;">
-        <span class="emphasis">March 13, 2023:</span>
-        Debut of <a href="https://spectrum.ieee.org/human-robot-interaction-2659586979">Toaster Bot</a> at HRI.
-        <br>
-      </h2>
+      <div style="margin-left:-25px;">
+        <h2>
+          <span class="emphasis">March 13, 2023:</span>
+          Debut of <a href="https://spectrum.ieee.org/human-robot-interaction-2659586979">Toaster Bot</a> at HRI.
+          <br>
+        </h2>
+      </div>
     </div>
 
   </div>
