--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <span class="emphasis">I'm located in:</span> Ithaca, NY <br>
         <span class="emphasis">I enjoy:</span> running, swimming, Marvel movies, origami. <br>
         <span class="emphasis">I'm reading:</span> <a
-          href="https://www.amazon.com/Algorithms-Live-Computer-Science-Decisions/dp/1250118360/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1674100929&sr=8-1">Algorithms
-          to Live By</a> by Brian Christian and Tom Griffiths.
+          href="https://www.amazon.com/Your-Wit-My-Command-Building/dp/0262045990">Your
+          Wit Is My Command: Building AIs with a Sense of Humor</a> by Tony Veale.
         <br>
       </h2>
     </div>
@@ -73,6 +73,7 @@
           Interaction (HRI '23). Association for Computing Machinery,
           New York, NY, USA, 787–790. <a
             href="https://doi.org/10.1145/3568294.3580182">https://doi.org/10.1145/3568294.3580182</a>
+          <a href="ToasterPoster.pdf">[Poster]</a>
         </span>
         <br>
 
