--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           Interaction (HRI '23). Association for Computing Machinery,
           New York, NY, USA, 787–790. <a
             href="https://doi.org/10.1145/3568294.3580182">https://doi.org/10.1145/3568294.3580182</a>
-          <a href="ToasterPoster.pdf">[Poster]</a>
+          [<a href="ToasterPoster.pdf">Poster</a>]
         </span>
         <br>
 
