--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
           Interaction (HRI '23). Association for Computing Machinery,
           New York, NY, USA, 787–790. <a
             href="https://doi.org/10.1145/3568294.3580182">https://doi.org/10.1145/3568294.3580182</a>
-          [<a href="ToasterPoster.pdf">Poster</a>]
+          [<a href="ToasterPoster.pdf">Poster</a>] <br><br>
+          M. Ye, E. Schneiders, W. Lee, M. Jung, “The Future of Home Appliances: 
+          A Study on the Robotic Toaster as a Domestic Social Robot,” 2023 32nd 
+          IEEE International Conference on Robot and Human Interactive Communication 
+          (RO-MAN), Busan, Korea, 2023, pp. --, doi: .
         </span>
         <br>
 
