--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         I previously conducted an independent biomedical research project at the University of Tennessee. I studied
         <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><br><br>
 
-        <span class="emphasis">Representative Work:</span> <br>
+        <span class="emphasis">Publications:</span> <br>
         <span style="font-size:11pt;">
           Meryl Ye, Rei (Wen-Ying) Lee, Johan Michalove, and Jessie Wong. 2023.
           Toaster Bot: Designing for Utility and Enjoyability in the Kitchen Space.
@@ -78,6 +78,13 @@
           A Study on the Robotic Toaster as a Domestic Social Robot,” 2023 32nd 
           IEEE International Conference on Robot and Human Interactive Communication 
           (RO-MAN), Busan, Korea, 2023, pp. --, doi: .
+        </span>
+        <br>
+
+        <span class="emphasis">Other Work:</span> <br>
+        <span style="font-size:11pt;">
+          <i> ChangeMyView: Persuasion in Online Social Networks </i><br>
+          [<a href="CS6850.pdf">Paper</a>] <br><br>
         </span>
         <br>
 
