--- a/index.html
+++ b/index.html
@@ -60,10 +60,6 @@
       <h2 style="margin-top:50px;">
         I investigate how technology impacts people and more importantly, how we can design technology to enable
         autonomy and promote user well-being. <br><br>
-        I currently conduct research in the <a href="https://riglab.infosci.cornell.edu/" target="_blank">Robots in
-          Groups Lab</a> advised by Professor Malte Jung. <br><br>
-        I previously conducted an independent biomedical research project at the University of Tennessee. I studied
-        <a href="BCIResearch.pdf">brain-computer interfaces aiming to improve student learning. </a><br><br>
 
         <span class="emphasis">Publications:</span> <br>
         <span style="font-size:11pt;">
@@ -79,12 +75,16 @@
           IEEE International Conference on Robot and Human Interactive Communication 
           (RO-MAN), Busan, Korea, 2023, pp. --, doi: .
         </span>
-        <br>
+        <br><br>
 
         <span class="emphasis">Other Work:</span> <br>
         <span style="font-size:11pt;">
-          <i> ChangeMyView: Persuasion in Online Social Networks </i><br>
-          [<a href="CS6850.pdf">Paper</a>] <br><br>
+          For the final project of CS 6850, Ruqing Xu and I investigated factors of persuasion in an online social network.<br>
+          Read the <a href="CS6850.pdf">paper</a>. <br><br>
+
+          I previously conducted an independent biomedical research project at the University of Tennessee. I studied
+          brain-computer interfaces aiming to improve student learning. <br>
+          Check out the <a href="BCIResearch.pdf">poster</a>. <br><br>
         </span>
         <br>
 
