--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </h2>
     </div>
 
-    <div id="research" class="body" style="display:none;">
+    <div id="research" class="longbody" style="display:none;">
       <h2 style="margin-top:50px;">
         I investigate how technology impacts people and more importantly, how we can design technology to enable
         autonomy and promote user well-being. <br><br>
