--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <div style="margin-left:-25px;">
         <h1>Hi, I'm Meryl. </h1><br><br><br><br>
         <h2>
-          I am a computer science student at <a href="https://www.cornell.edu/">Cornell University</a> curious about
-          human-robot interaction, human-computer interaction, design, and artificial intelligence. <br><br>
+          I am a computer science student at <a href="https://www.cornell.edu/">Cornell University</a> curious about 
+          human-computer interaction and social computing. <br><br>
           For reference, my <a href="2023springres.pdf">resume</a>. <br><br>
           <i>
             To contact me:
@@ -58,8 +58,8 @@
 
     <div id="research" class="body" style="display:none;">
       <h2 style="margin-top:50px;">
-        I investigate how technology impacts people and more importantly, how we can design technology to enable
-        autonomy and promote user well-being. <br><br>
+        I investigate how technology influences human behavior and how we can design technology to enhance interactions
+        within social environments (whether physical or virtual). <br><br>
 
         <span class="emphasis">Publications:</span> <br>
         <span style="font-size:11pt;">
