--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<body style="background-color:#fff;">
+<body style="background-color:#baf7fc;">
 
   <head>
     <link href="https://fonts.googleapis.com/css?family=Karla|Almarai|Rock+Salt&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
         <h2>
           I am a computer science student at <a href="https://www.cornell.edu/">Cornell University</a> curious about 
           human-computer interaction and social computing. <br><br>
-          For reference, my <a href="2023springres.pdf">resume</a>. <br><br>
+          For reference, my <a href="YeResume.pdf">resume</a>. <br><br>
           <i>
             To contact me:
             <ul>
@@ -48,7 +48,8 @@
     <div id="about me" class="body" style="display:none;">
       <h2 style="margin-top:100px;">
         <span class="emphasis">I'm located in:</span> Ithaca, NY <br>
-        <span class="emphasis">I enjoy:</span> running, swimming, Marvel movies, origami. <br>
+        <span class="emphasis">I enjoy:</span> running, swimming, piano, Marvel movies, origami. <br>
+        <span class="emphasis">I'm trying to learn:</span> watercolor. <br>
         <span class="emphasis">I'm reading:</span> <a
           href="https://www.amazon.com/Your-Wit-My-Command-Building/dp/0262045990">Your
           Wit Is My Command: Building AIs with a Sense of Humor</a> by Tony Veale.
@@ -58,8 +59,7 @@
 
     <div id="research" class="body" style="display:none;">
       <h2 style="margin-top:50px;">
-        I investigate how technology influences human behavior and how we can design technology to enhance interactions
-        within social environments (whether physical or virtual). <br><br>
+        I investigate the complex relationships and interactions involving people and technology. <br><br>
 
         <span class="emphasis">Publications:</span> <br>
         <span style="font-size:11pt;">
@@ -69,16 +69,18 @@
           Interaction (HRI '23). Association for Computing Machinery,
           New York, NY, USA, 787–790. <a
             href="https://doi.org/10.1145/3568294.3580182">https://doi.org/10.1145/3568294.3580182</a>
-          [<a href="ToasterPoster.pdf">Poster</a>] <br><br>
+          [<a href="ToasterPoster.pdf">Poster</a>][<a href="https://youtu.be/tkroipJ-gzg">Video</a>] <br><br>
           M. Ye, E. Schneiders, W. Lee, M. Jung, “The Future of Home Appliances: 
           A Study on the Robotic Toaster as a Domestic Social Robot,” 2023 32nd 
           IEEE International Conference on Robot and Human Interactive Communication 
-          (RO-MAN), Busan, Korea, 2023, pp. --, doi: .
+          (RO-MAN), Busan, Korea, 2023.[<a href="FutureAppliance.pdf">Paper</a>][<a href="https://youtu.be/TFpHq0moOmM">Video</a>]
         </span>
         <br><br>
 
         <span class="emphasis">Other Work:</span> <br>
         <span style="font-size:11pt;">
+          Watch the toaster <a href="https://www.youtube.com/playlist?list=PLOMiQvOmbgxfWQscg9jRBRB22D0a4eHFT">vignettes</a>! <br><br>
+
           For the final project of CS 6850, Ruqing Xu and I investigated factors of persuasion in an online social network.<br>
           Read the <a href="CS6850.pdf">paper</a>. <br><br>
 
