--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<body style="background-color:#baf7fc;">
+<body style="background-color:#daf7fa;">
 
   <head>
     <link href="https://fonts.googleapis.com/css?family=Karla|Almarai|Rock+Salt&display=swap" rel="stylesheet">
