--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     <div id="about me" class="body" style="display:none;">
       <h2 style="margin-top:100px;">
         <span class="emphasis">I'm located in:</span> Ithaca, NY <br>
-        <span class="emphasis">I enjoy:</span> running, swimming, piano, Marvel movies, origami. <br>
-        <span class="emphasis">I'm trying to learn:</span> watercolor. <br>
+        <span class="emphasis">I enjoy:</span> running, swimming, piano, Marvel movies, origami <br>
+        <span class="emphasis">I'm trying to learn:</span> watercolor <br>
         <span class="emphasis">I'm reading:</span> <a
           href="https://www.amazon.com/Your-Wit-My-Command-Building/dp/0262045990">Your
-          Wit Is My Command: Building AIs with a Sense of Humor</a> by Tony Veale.
+          Wit Is My Command: Building AIs with a Sense of Humor</a> by Tony Veale
         <br>
       </h2>
     </div>
 
     <div id="research" class="body" style="display:none;">
-      <h2 style="margin-top:50px;">
+      <h2>
         I investigate the complex relationships and interactions involving people and technology. <br><br>
 
         <span class="emphasis">Publications:</span> <br>
