--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <span class="emphasis">Other Work:</span> <br>
         <span style="font-size:11pt;">
-          Watch the toaster <a href="https://www.youtube.com/playlist?list=PLOMiQvOmbgxfWQscg9jRBRB22D0a4eHFT">vignettes</a>! <br><br>
+          Watch the <a href="https://www.youtube.com/playlist?list=PLOMiQvOmbgxfWQscg9jRBRB22D0a4eHFT">toaster vignettes</a>! <br><br>
 
           For the final project of CS 6850, Ruqing Xu and I investigated factors of persuasion in an online social network.<br>
           Read the <a href="CS6850.pdf">paper</a>. <br><br>
