--- a/mobile.html
+++ b/mobile.html
@@ -1,6 +1,6 @@
 <html>
 
-<body style="background-color:#fff;">
+<body style="background-color:#daf7fa;">
 
   <head>
     <link href="https://fonts.googleapis.com/css?family=Karla|Almarai|Rock+Salt&display=swap" rel="stylesheet">
@@ -14,8 +14,9 @@
 
     <div id="home" class="body" style="margin-left:20px;">
       <h2 style="width:700px;">
-        <span class="emphasis" style="font-size:7.5em;line-height: 100px;"> This site is not available for mobile.
-          Please view on desktop. </span>
+        <span class="emphasis" style="font-size:2em;line-height: 100px;"> Loading... </span><br><br>
+        Just kidding. Please view this site on desktop.<br>
+        It looks better there.
       </h2>
     </div>
 
