--- a/mobile.html
+++ b/mobile.html
@@ -14,9 +14,9 @@
 
     <div id="home" class="body" style="margin-left:20px;">
       <h2 style="width:700px;">
-        <span class="emphasis" style="font-size:2em;line-height: 100px;"> Loading... </span><br><br>
-        Just kidding. Please view this site on desktop.<br>
-        It looks better there.
+        <span class="emphasis" style="font-size:7em;line-height: 100px;"> Loading... </span><br><br><br>
+        <span style="font-size:5em;line-height: 100px;">Just kidding. Please view this site on desktop.<br>
+        It looks better there.</span>
       </h2>
     </div>
 
