--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </head>
 
   <div class="tab">
-    <button class="tabs active" onclick="showNewTab(event, 'home')">Home</button>
-    <button class="tabs" onclick="showNewTab(event, 'about me')">About Me</button>
-    <button class="tabs" onclick="showNewTab(event, 'research')">Research</button>
-    <button class="tabs" onclick="showNewTab(event, 'news')">News and Other Stories</button>
+    <button class="tabs active" onclick="showNewTab(event, 'home')">home</button>
+    <button class="tabs" onclick="showNewTab(event, 'about me')">about me</button>
+    <button class="tabs" onclick="showNewTab(event, 'research')">research</button>
+    <button class="tabs" onclick="showNewTab(event, 'news')">news</button>
   </div>
 
 
