--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           M. Ye, E. Schneiders, W. Lee, M. Jung, “The Future of Home Appliances: 
           A Study on the Robotic Toaster as a Domestic Social Robot,” 2023 32nd 
           IEEE International Conference on Robot and Human Interactive Communication 
-          (RO-MAN), Busan, Korea, 2023.[<a href="FutureAppliance.pdf">Paper</a>][<a href="https://youtu.be/TFpHq0moOmM">Video</a>]
+          (RO-MAN), Busan, Korea, 2023. <i> To appear in proceedings. </i>[<a href="FutureAppliance.pdf">Paper</a>][<a href="https://youtu.be/TFpHq0moOmM">Video</a>]
         </span>
         <br><br>
 
