--- a/mobile.html
+++ b/mobile.html
@@ -10,6 +10,16 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
 
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKEH9C0MFJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XKEH9C0MFJ');
+  </script>
+
   <div style="margin:auto;width:900px;vertical-align:middle;">
 
     <div id="home" class="body" style="margin-left:20px;">
