--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.4/mobile-detect.min.js"></script>
   </head>
 
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKEH9C0MFJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XKEH9C0MFJ');
+  </script>
+
   <div class="tab">
     <button class="tabs active" onclick="showNewTab(event, 'home')">home</button>
     <button class="tabs" onclick="showNewTab(event, 'about me')">about me</button>
