--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
           New York, NY, USA, 787–790. <a
             href="https://doi.org/10.1145/3568294.3580182">https://doi.org/10.1145/3568294.3580182</a>
           [<a href="ToasterPoster.pdf">Poster</a>][<a href="https://youtu.be/tkroipJ-gzg">Video</a>] <br><br>
-          Meryl Ye, Eike Schneiders, Wen-Ying Lee, Malte Jung, “The Future of Home Appliances: 
-          A Study on the Robotic Toaster as a Domestic Social Robot,” 2023. 32nd 
-          IEEE International Conference on Robot and Human Interactive Communication 
-          (RO-MAN), Busan, Korea, 2023. <i> To appear in proceedings. </i>[<a href="FutureAppliance.pdf">Paper</a>][<a href="https://youtu.be/TFpHq0moOmM">Video</a>]
+          M. Ye, E. Schneiders, W. -Y. Lee and M. Jung, "The Future of Home Appliances: A Study on the Robotic Toaster as a Domestic Social Robot," 2023 32nd IEEE International Conference on Robot and Human Interactive Communication (RO-MAN), Busan, Korea, Republic of, 2023, pp. 477-482, doi: <a
+          href="https://ieeexplore.ieee.org/document/10309555">10.1109/RO-MAN57019.2023.10309555</a>. [<a href="FutureAppliance.pdf">Paper</a>][<a href="https://youtu.be/TFpHq0moOmM">Video</a>]
         </span>
         <br><br>
 
@@ -112,6 +110,8 @@
           <span class="emphasis">March 13, 2023:</span>
           Debut of <a href="https://spectrum.ieee.org/human-robot-interaction-2659586979">Toaster Bot</a> at HRI.
           <br>
+          <span class="emphasis">August 29, 2023:</span>
+          I present <a href="https://ieeexplore.ieee.org/document/10309555">The Future of Home Appliances</a> at RO-MAN.
         </h2>
       </div>
     </div>
