--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
           <br>
           <span class="emphasis">August 29, 2023:</span>
           I present <a href="https://ieeexplore.ieee.org/document/10309555">The Future of Home Appliances</a> at RO-MAN.
+          <br>
+          <span class="emphasis">December 17, 2023:</span>
+          I graduate from Cornell University with a B.S. in Computer Science. 
         </h2>
       </div>
     </div>
